# learnc

./: CMakeLists.txt  README.md
src/: global.h  main.c
src/mem/: mem.c  mem.h
src/utils/: utils.c  utils.h
src/utils/list/: array_list.c  list.h
